--- a/web/components/layout.templ
+++ b/web/components/layout.templ
@@ -5,9 +5,11 @@ templ head(title string) {
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>{ title }</title>
+		<link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
 		<link rel="stylesheet" href="/static/style.css"/>
 		<script src="https://unpkg.com/lucide@latest"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js" integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm" crossorigin="anonymous"></script>
 	</head>
 }
 
@@ -18,11 +20,8 @@ templ Layout(title string) {
 		<body class="bg-background text-foreground w-full">
 			<div class="flex min-h-screen" x-data="{sidebarOpen: true}">
 				@sidebar()
-				<main class="ml-60 flex-1">
-					@Header()
-					<div class="py-4">
-						{ children... }
-					</div>
+				<main class="ml-60 flex-1 min-h-screen">
+					{ children... }
 				</main>
 			</div>
 		</body>
@@ -36,13 +35,16 @@ templ Header() {
 	<div class="flex items-center h-16 border-b border-b-border w-full px-6" x-data="{}">
 		<button
 			type="button"
-			class="bg-secondary p-2 rounded-md text-muted text-sm flex border border-transparent items-center cursor-pointer hover:text-foreground hover:border-sky-500"
+			class="bg-secondary p-2 rounded-md text-muted text-xs flex border border-transparent items-center cursor-pointer hover:text-foreground hover:border-sky-500"
 		>
-			<span class="flex items-center gap-1 pr-2">
+			<span class="flex items-center gap-1 pr-3">
 				<i data-lucide="plus" class="h-5 w-5"></i>
 				<span>Add Link</span>
 			</span>
-			<i data-lucide="command" class="h-4 w-4"></i>
+			<span class="px-1 border border-muted rounded-md flex items-center">
+				<i data-lucide="command" class="h-3 w-3"></i>
+				<span>+K</span>
+			</span>
 		</button>
 	</div>
 }
